--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -30,7 +30,7 @@
                                     <input type="text" class="form-control" name="username" placeholder="Username must be unique" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Enter a valid email" />
+                                    <input type="email" class="form-control" name="email" placeholder="Enter a valid email" />
                                 </div>
                                 <div class="form-group">
                                     <input type="password" class="form-control" name="password" placeholder="Password *"/>
