--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -27,16 +27,28 @@
                         <div class="row register-form">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="username" placeholder="Username must be unique" />
+                                    <input type="text" class="form-control <%= error.username ? 'is-invalid' : '' %>" name="username" placeholder="Username must be unique " />
+                                    <div class="invalid-feedback">
+                                        <%= error.username && error.username %> 
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" name="email" placeholder="Enter a valid email" />
+                                    <input type="email" class="form-control <%= error.email ? 'is-invalid' : '' %>" name="email" placeholder="Enter a valid email" />
+                                    <div class="invalid-feedback">
+                                        <%= error.email && error.email %> 
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" name="password" placeholder="Password *"/>
+                                    <input type="password" class="form-control <%= error.password ? 'is-invalid' : '' %>" name="password" placeholder="Password *"/>
+                                    <div class="invalid-feedback">
+                                        <%= error.password && error.password %> 
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm Password *" value="" />
+                                    <input type="password" class="form-control <%= error.confirmPassword ? 'is-invalid' : '' %>" name="confirmPassword" placeholder="Confirm Password *" value="" />
+                                    <div class="invalid-feedback">
+                                        <%= error.confirmPassword && error.confirmPassword %> 
+                                    </div>
                                 </div>
                                 <input type="submit" class="btnRegister" value="Register" />
                             </div>
