--- a/views/playground/signup.ejs
+++ b/views/playground/signup.ejs
@@ -27,7 +27,10 @@
                         <div class="row register-form">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="username" placeholder="Username must be unique" />
+                                    <input type="text" class="form-control" name="username" placeholder="Username must be unique <%= error.username ? 'is-invalid' : '' %> " />
+                                </div>
+                                <div class="invalid-feedback">
+                                    <%= error.username && error.uername %> 
                                 </div>
                                 <div class="form-group">
                                     <input type="email" class="form-control" name="email" placeholder="Enter a valid email" />
