--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -27,19 +27,19 @@
                         <div class="row register-form">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input type="text" class="form-control <%= error.username ? 'is-invalid' : '' %>" name="username" placeholder="Username must be unique " />
+                                    <input type="text" class="form-control <%= error.username ? 'is-invalid' : '' %>" name="username" placeholder="Username must be unique " value="<%= value.username && value.username %>"  />
                                     <div class="invalid-feedback">
                                         <%= error.username && error.username %> 
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control <%= error.email ? 'is-invalid' : '' %>" name="email" placeholder="Enter a valid email" />
+                                    <input type="email" class="form-control <%= error.email ? 'is-invalid' : '' %>" name="email" placeholder="Enter a valid email" value="<%= value.email && value.email %>"/>
                                     <div class="invalid-feedback">
                                         <%= error.email && error.email %> 
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control <%= error.password ? 'is-invalid' : '' %>" name="password" placeholder="Password *"/>
+                                    <input type="password" class="form-control <%= error.password ? 'is-invalid' : '' %>" name="password" placeholder="Password *" value="<%= value.password && value.password %>"/>
                                     <div class="invalid-feedback">
                                         <%= error.password && error.password %> 
                                     </div>
