--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -11,8 +11,7 @@
         <div class="col-md-9 register-right">
             <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link" id="home-tab" href="/auth/signup" role="tab"
-                        aria-selected="false">Signup</a>
+                    <a class="nav-link" id="home-tab" href="/auth/signup" role="tab" aria-selected="false">Signup</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" id="profile-tab" href="/auth/login" role="tab"
@@ -25,11 +24,25 @@
                         <h3 class="register-heading">Login to your account</h3>
                         <div class="row register-form">
                             <div class="col-md-12">
+                                <% if(error.message){ %>
+                                <div>
+                                    <p class="text-danger">Unable to login with following credentials</p>
+                                </div>
+                                <% } %>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" name="email" placeholder="Enter a valid email" />
+                                    <input type="email" class="form-control <%= error.email ? 'is-invalid' : '' %>"
+                                        name="email" placeholder="Enter a valid email" value="<%= value.username ? value.username : '' %> "/>
+                                        <div class="invalid-feedback">
+                                            <%= error.email && error.email %> 
+                                        </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" name="password" placeholder="Password *"/>
+                                    <input type="password"
+                                        class="form-control <%= error.password ? 'is-invalid' : '' %>" name="password"
+                                        placeholder="Password *" />
+                                        <div class="invalid-feedback">
+                                            <%= error.password && error.password %> 
+                                        </div>
                                 </div>
                                 <input type="submit" class="btnRegister" value="Submit" />
                             </div>
