--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -31,20 +31,21 @@
                                 <% } %>
                                 <div class="form-group">
                                     <input type="email" class="form-control <%= error.email ? 'is-invalid' : '' %>"
-                                        name="email" placeholder="Enter a valid email" value="<%= value.username ? value.username : '' %> "/>
-                                        <div class="invalid-feedback">
-                                            <%= error.email && error.email %> 
-                                        </div>
+                                        name="email" placeholder="Enter a valid email"
+                                        value="<%= value.username ? value.username : '' %> " />
+                                    <div class="invalid-feedback">
+                                        <%= error.email && error.email %>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <input type="password"
                                         class="form-control <%= error.password ? 'is-invalid' : '' %>" name="password"
                                         placeholder="Password *" />
-                                        <div class="invalid-feedback">
-                                            <%= error.password && error.password %> 
-                                        </div>
+                                    <div class="invalid-feedback">
+                                        <%= error.password && error.password %>
+                                    </div>
                                 </div>
-                                <input type="submit" class="btnRegister" value="Submit" />
+                                <input type="submit" class="btnRegister" value="Login" />
                             </div>
                         </div>
                     </div>
