<Flash> showing alert message

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,3 +12,6 @@
     </head>
     <body>
         <%- include('./navigations.ejs') %> 
+        <div class="container">
+            <%- include('./alert.ejs') %>
+        </div> 
