--- a/views/playground/play.ejs
+++ b/views/playground/play.ejs
@@ -21,7 +21,7 @@
             </ul>
             <div class="tab-content" id="myTabContent">
 
-                <form action="/playground/validator" method="POST" enctype="multipart/form-data">
+                <form action="/playground/play" method="POST" enctype="multipart/form-data">
                     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                         <h3 class="register-heading">Register a new account/h3>
                         <div class="row register-form">
@@ -30,7 +30,7 @@
                                     <input type="text" class="form-control" name="username" placeholder="Username must be unique <%= error.username ? 'is-invalid' : '' %> " />
                                 </div>
                                 <div class="form-group">
-                                    <input type="file" class="form-control" name="file" />
+                                    <input type="file" class="form-control" name="my-file" />
                                 </div>
                                 <input type="submit" class="btnRegister" value="Register" />
                             </div>
